--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -153,3 +153,6 @@ ERROR_QA = "dev-so debug-deps dev-deps debug-files arch pkgconfig la perms \
 # Mask unused kernel recipes from "meta-fsl-arm" to clean warning
 # WARNING: Unable to get checksum for linux-imx SRC_URI entry defconfig
 BBMASK = "meta-fsl-arm/recipes-kernel/linux/"
+
+# DEY distro blacklisted recipes
+PNBLACKLIST[adt-installer] = "[DEY not supported] adt-installer hardcodes distro version in URL paths. DEY versioning is incompatible."
