--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,5 +1,5 @@
 DISTRO = "dey"
-DISTRO_NAME = "Digi Embedded for Yocto"
+DISTRO_NAME = "Digi Embedded Yocto"
 DISTRO_VERSION = "1.6.2"
 DISTRO_CODENAME = "daisy"
 SDK_VENDOR = "-deysdk"
