--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "1.6.2"
-DISTRO_CODENAME = "daisy"
+DISTRO_VERSION = "1.7"
+DISTRO_CODENAME = "dizzy"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
@@ -57,7 +57,7 @@ EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 
-POKYQEMUDEPS = "${@base_contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "qemu-config",d)}"
+POKYQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
 DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemuppc = " ${POKYQEMUDEPS}"
@@ -82,6 +82,7 @@ PREMIRRORS ??= "\
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
+gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \n \
 hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
@@ -111,6 +112,7 @@ SANITY_TESTED_DISTROS ?= " \
             Poky-1.4 \n \
             Poky-1.5 \n \
             Poky-1.6 \n \
+            Poky-1.7 \n \
             Ubuntu-12.04 \n \
             Ubuntu-13.10 \n \
             Ubuntu-14.04 \n \
@@ -123,6 +125,9 @@ SANITY_TESTED_DISTROS ?= " \
             Debian-7.2 \n \
             Debian-7.3 \n \
             Debian-7.4 \n \
+            Debian-7.5 \n \
+            Debian-7.6 \n \
+            Debian-7.7 \n \
             SUSE-LINUX-12.2 \n \
             openSUSE-project-12.3 \n \
             openSUSE-project-13.1 \n \
@@ -143,7 +148,7 @@ INHERIT += "poky-sanity"
 
 # QA check settings - a little stricter than the OE-Core defaults
 WARN_QA = "textrel files-invalid incompatible-license xorg-driver-abi libdir \
-           unknown-configure-option"
+           unknown-configure-option build-deps"
 ERROR_QA = "dev-so debug-deps dev-deps debug-files arch pkgconfig la perms \
             useless-rpaths rpaths staticdev ldflags pkgvarcheck already-stripped \
             compile-host-path dep-cmp installed-vs-shipped install-host-path \
