--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -55,7 +55,7 @@ PREFERRED_VERSION_bluez5 ?= "5.48"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "4.14%"
+PREFERRED_VERSION_linux-yocto ?= "4.18%"
 
 # Some features (swupdate, environment encryption) depends on this specific
 # provider for u-boot-fw-tools
@@ -106,13 +106,11 @@ https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
 # fetch from the network (and warn you if not). To disable the test set
 # the variable to be empty.
 # Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=master
-
 CONNECTIVITY_CHECK_URIS ?= "https://www.example.com/"
 
 SANITY_TESTED_DISTROS ?= " \
-            poky-2.4 \n \
             poky-2.5 \n \
-            ubuntu-15.04 \n \
+            poky-2.6 \n \
             ubuntu-16.04 \n \
             ubuntu-18.04 \n \
             fedora-28 \n \
@@ -135,13 +133,14 @@ INHERIT += "poky-sanity"
 # QA check settings - a little stricter than the OE-Core defaults
 WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
                     installed-vs-shipped ldflags pn-overrides rpaths staticdev \
-                    useless-rpaths"
+                    unknown-configure-option useless-rpaths"
 WARN_QA_remove = "${WARN_TO_ERROR_QA}"
 ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
 
 require conf/distro/include/poky-world-exclude.inc
 require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
+require conf/distro/include/security_flags.inc
 INHERIT += "uninative"
 
 # Enable removal of libtool '*.la' files (this is the default starting in 2.3)
