--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -32,6 +32,10 @@ SERIAL_CONSOLES ?= "115200;ttyLP2"
 # Bluetooth tty
 BT_TTY ?= "ttyLP1"
 
+# XBee
+XBEE_RESET_N_GPIO ?= "397"
+XBEE_SLEEP_RQ_GPIO ?= "400"
+
 # U-Boot script to be copied to the boot image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
